--- a/bible-cross-ref-service/resources/html/base.html
+++ b/bible-cross-ref-service/resources/html/base.html
@@ -51,7 +51,8 @@
       })();
     </script>
 
-    
+    <script src="js/main.js" type="text/javascript"></script>
+
     {% block page-scripts %}
     {% endblock %}
   </body>
