--- a/bible-cross-ref-service/resources/html/base.html
+++ b/bible-cross-ref-service/resources/html/base.html
@@ -3,54 +3,19 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to bible-cross-ref-service</title>
+    <title>Welcome to the Bible Cross Reference Explorer</title>
 
     <!-- styles -->
-    {% style """/assets/bulma/css/bulma.min.css" %}
-    {% style """/assets/material-icons/css/material-icons.min.css" %}
-
-    {% style """/css/screen.css" %}
   </head>
   <body>
-      <!-- navbar -->
-      <nav class="navbar is-info">
-          <div class="container">
-              <div class="navbar-brand">
-                  <a class="navbar-item" href="/" style="font-weight:bold;">bible-cross-ref-service</a>
-                  <span class="navbar-burger burger" data-target="nav-menu">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                  </span>
-              </div>
-              <div id="nav-menu" class="navbar-menu">
-                  <div class="navbar-start">
-                      <a href="/" class="navbar-item{% ifequal page "home.html" %} is-active{%endifequal%}">Home</a>
-                      <a href="/about" class="navbar-item{% ifequal page "about.html" %} is-active{%endifequal%}">About</a>
-                  </div>
-              </div>
-          </div>
-      </nav>
+    <h1>Bible Cross Reference Explorer</h1>
 
-      <section class="section">
-          <div class="container">
-              {% block content %}
-              {% endblock %}
-          </div>
-      </section>
+      <div class="row">
+        {% block content %}
+        {% endblock %}
+      </div>
 
     <!-- scripts -->
-    <script type="text/javascript">
-      (function() {
-        var burger = document.querySelector('.burger');
-        var nav = document.querySelector('#'+burger.dataset.target);
-        burger.addEventListener('click', function(){
-          burger.classList.toggle('is-active');
-          nav.classList.toggle('is-active');
-        });
-      })();
-    </script>
-
     {% block page-scripts %}
     {% endblock %}
   </body>
