Adding very basic graph visualization

--- a/bible-cross-ref-service/resources/html/base.html
+++ b/bible-cross-ref-service/resources/html/base.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to the Bible Cross Reference Explorer</title>
+    <title>Bible Cross Reference Explorer</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script>
 
     <!-- styles -->
   </head>
